Fix closing tab sometimes switches to next split

BUG: 465807
FIXED-IN: 23.04
(cherry picked from commit c3085d17a3f7aedb5e357fe12b4ad638acdbae20)